--- a/404.html
+++ b/404.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/Invite/" />
+    <script>
+      // Redirect all paths to index.html for SPA
+      window.location.href = "/Invite/index.html";
+    </script>
   </head>
   <body></body>
 </html>
